fix formatting of appendix

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -1,14 +1,15 @@
 %---------------------------------------------------------------------------
-\documentclass[fontsize=11pt,paper=a4,draft=off,titlepage=off]{scrartcl}
+\documentclass[fontsize=11pt,paper=a4,draft=off,titlepage=off, twoside]{scrartcl}
 %---------------------------------------------------------------------------
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{textcomp}
+\usepackage{subfig}
 \usepackage{CJKutf8}
 \usepackage{url}
 \usepackage[german]{babel}
 \usepackage{graphicx}
-\usepackage{eurosym}
+\usepackage[right]{eurosym}
 \graphicspath{ {./images/} }
 \DeclareGraphicsExtensions{.png, .PNG, .eps, .pdf}
 \usepackage{palatino}
@@ -28,6 +29,7 @@
 \usepackage{packages/pgf-pie}
 \usepackage{enumitem}
 \usepackage{rotating}
+\usepackage{pdflscape}
 \setlist[enumerate]{label*=\arabic*.}
 
 
