removed superfluous manual linebreak

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -66,7 +66,7 @@
     \vspace{1cm}
     {\scshape\Large Ausbildung zum Fachinformatiker f. Anwendungsentwicklung\par}
     \vspace{1.5cm}
-    {\huge\bfseries Abschlussprüfung Winter 2017\par\\IHK Berlin\par}
+    {\huge\bfseries Abschlussprüfung Winter 2017\par IHK Berlin\par}
     \vspace{2cm}
     Auszubildender:\par
     {\Large\itshape Nils Diefenbach\par}
