removed superfluous manual linebreak

--- a/dokumentation/src/implementierung.tex
+++ b/dokumentation/src/implementierung.tex
@@ -22,9 +22,12 @@ wachsenden Array abgewandelt werden. Da letzteres ohnehin entwickelt werden muss
 war die Komplexität dieser Anforderung gering.
 
 \subsubsection{Dynamische Array-Implementierung}
-C stellt nur simple Datentypen zur Verfügung, welche dem Nutzer erlauben komplexere Datenstrukturen abzubilden. Da ein dynamisch-wachsendes
+C stellt nur simple Datentypen zur Verfügung, welche dem Nutzer erlauben komplexere
+Datenstrukturen abzubilden. Da ein dynamisch-wachsendes
 Array nicht in C zur Verfügung steht, musste eine Datenstruktur für dieses erstellt werden.
 Das Konzept hierbei ist recht einfach - sollte das Array voll sein, so wird beim
-nächsten Aufruf der Insert-Funktion die Länge des Array verdoppelt. Hierfür wurde eine neue Datenstruktur angelegt und drei Funktionen definiert, um mit der Datenstruktur interagieren zu können. Ein Auszug des Quellcodes dieser Datenstruktur ist im Anhang zu finden \ref{lising:arrayImplementation}.\par
+nächsten Aufruf der Insert-Funktion die Länge des Array verdoppelt. Hierfür wurde
+eine neue Datenstruktur angelegt und drei Funktionen definiert, um mit der Datenstruktur
+interagieren zu können.\par
 
 \clearpage
