cropping pages, removed folder struct image

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -10,6 +10,7 @@
 \usepackage[german]{babel}
 \usepackage{graphicx}
 \usepackage[right]{eurosym}
+\usepackage{packages/wrapfig}
 \graphicspath{ {./images/} }
 \DeclareGraphicsExtensions{.png, .PNG, .eps, .pdf}
 \usepackage{palatino}
