--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -30,13 +30,6 @@
 	\centering
 \end{figure}
 
-\clearpage
-\begin{figure}[!htp]
-	\caption{Übersicht der Projektstruktur}
-	\label{fig:folderstruct}
-	\includegraphics[width=\textwidth]{folder_struct}
-\end{figure}
-
 \begin{figure}[!htp]
     \caption{Verteilung der QGramme im zu bearbeitenden Datensatz}
     \label{fig:qgram_verteilung}
@@ -307,16 +300,14 @@ Datenstrukturen & 10.00\% & 3 & 0.3 & 4 & 0.4 & 5 & 0.5 & 5 & 0.5 \\
 \end{itemize}
 \clearpage
 
-\section{Quellcodeauszüge}
+\section{Codeauszüge}
 
-\lstinputlisting[language=C, caption=Pseudocode des zu implementierenden Algorithmus, label=listing:pseudocode]{anhang/pseudo.c}
-
-\lstinputlisting[language=C, caption=Auszug aus dem C Quellcode des dynamischen Array, label=lising:arrayImplementation,]{anhang/array.c}
+\lstinputlisting[language=C, basicstyle=\tiny, caption=Pseudocode des zu implementierenden Algorithmus, label=listing:pseudocode]{anhang/pseudo.c}
 
 \clearpage
 
 
-\lstinputlisting[language=C, caption=Beispiel eines Docstrings für Entwickler, label=listing:entwicklerDoku]{anhang/docstring.c}
+\lstinputlisting[language=C, basicstyle=\tiny, caption=Beispiel eines Docstrings für Entwickler, label=listing:entwicklerDoku]{anhang/docstring.c}
 
 \begin{lstlisting}[style=xterm, caption=Ausgabe der Endnutzerdokumentation über den --help parameter, label=fig:cliHelp,]
 
