--- a/dokumentation/src/entwurfsphase.tex
+++ b/dokumentation/src/entwurfsphase.tex
@@ -25,12 +25,12 @@ diese verstehen sich als Teilstring eines Strings der Länge Q. Dieser Code wurd
 Aktivitätsdiagramm\ref{fig:programmlogik} visualisiert. Der zugrunde liegende  Pseudocode des Diagramms ist ebenfalls im Anhang\ref{listing:pseudocode} einsehbar.
 
 
-
+\clearpage
 \subsection{Architekturdesign}
+
 Das Projekt besteht aus zwei Header-Dateien und einer main.c. Die Header-Dateien
 beinhalten zum einen die algorithmusspezifischen Funktionen zum Vergleich von
-Strings, zum anderen eine open-source Hashmap-Implementierung. Ein Screenshot der
-Ordnerstruktur kann im Anhang\ref{fig:folderstruct} eingesehen werden.
+Strings, zum anderen eine open-source Hashmap-Implementierung.
 
 Auf Programmebene wurde die Logik in zwei Abschnitte unterteilt:
 \begin{itemize}
